refactor(rootless): keep minimal Android-26-safe NPatch remote client