@@ -5,10 +5,8 @@ import android.content.SharedPreferences;
 import android.net.Uri;
 import android.os.Bundle;
 import android.os.IBinder;
-import android.os.ParcelFileDescriptor;
 import android.os.RemoteException;
 
-import java.io.FileNotFoundException;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -31,11 +29,12 @@ import java.util.concurrent.TimeoutException;
 import io.github.libxposed.service.IXposedService;
 
 /**
- * NPatch Remote API client, vendored from 7723mod/NPatch-Remote-API (Apache-2.0).
+ * Minimal NPatch Remote API client used by BetterHeybox.
  *
- * <p>It is used only as a settings-process fallback when NPatch Local mode does
- * not deliver the normal libxposed XposedService callback. Hook injection still
- * belongs to NPatch/libxposed itself.</p>
+ * <p>Adapted from 7723mod/NPatch-Remote-API (Apache-2.0). Only the authenticated
+ * API-102 RemotePreferences surface needed by this project is retained. This
+ * variant avoids newer java.lang APIs so BetterHeybox's Android 8+ minSdk stays
+ * valid.</p>
  */
 public final class NPatchRemoteClient {
     public static final String DEFAULT_AUTHORITY = "top.nkbe.npatch.remote";
@@ -43,7 +42,8 @@ public final class NPatchRemoteClient {
     private static final String METHOD_GET_REMOTE_SERVICE = "getRemoteService";
     private static final String KEY_MODULE_PACKAGE = "modulePackageName";
     private static final String KEY_BINDER = "binder";
-    private static final long CONNECT_TIMEOUT_SECONDS = 3;
+    private static final long CONNECT_TIMEOUT_SECONDS = 3L;
+
     private static final ExecutorService CONNECTION_EXECUTOR =
             Executors.newCachedThreadPool(runnable -> {
                 Thread thread = new Thread(runnable, "NPatch-RemoteConnect");
@@ -58,160 +58,83 @@ public final class NPatchRemoteClient {
         this.service = service;
     }
 
-    public static NPatchRemoteClient connect(Context context) {
-        return connect(context, context.getPackageName());
-    }
-
-    public static NPatchRemoteClient connect(Context context, String modulePackageName) {
-        return connect(context, modulePackageName, DEFAULT_AUTHORITY);
-    }
-
-    public static NPatchRemoteClient connect(
-            Context context,
-            String modulePackageName,
-            String authority
-    ) {
-        return new NPatchRemoteClient(connectService(context, modulePackageName, authority));
+    public static boolean isAvailable(Context context) {
+        try {
+            return context.getPackageManager().resolveContentProvider(DEFAULT_AUTHORITY, 0) != null;
+        } catch (Throwable ignored) {
+            return false;
+        }
     }
 
     public static CompletableFuture<NPatchRemoteClient> connectAsync(Context context) {
-        return connectAsync(context, context.getPackageName());
+        Context app = context.getApplicationContext();
+        return CompletableFuture.supplyAsync(() -> connect(app), CONNECTION_EXECUTOR);
     }
 
-    public static CompletableFuture<NPatchRemoteClient> connectAsync(
-            Context context,
-            String modulePackageName
-    ) {
-        return connectAsync(context, modulePackageName, DEFAULT_AUTHORITY);
-    }
-
-    public static CompletableFuture<NPatchRemoteClient> connectAsync(
-            Context context,
-            String modulePackageName,
-            String authority
-    ) {
-        return CompletableFuture.supplyAsync(
-                () -> connect(context, modulePackageName, authority),
-                CONNECTION_EXECUTOR
-        );
-    }
-
-    public static IXposedService connectService(Context context, String modulePackageName) {
-        return connectService(context, modulePackageName, DEFAULT_AUTHORITY);
-    }
-
-    public static IXposedService connectService(
-            Context context,
-            String modulePackageName,
-            String authority
-    ) {
-        IBinder binder = requestBinder(
-                context,
-                METHOD_GET_REMOTE_SERVICE,
-                modulePackageName,
-                authority
-        );
+    public static NPatchRemoteClient connect(Context context) {
+        Objects.requireNonNull(context, "context");
+        String modulePackageName = context.getPackageName();
+        IBinder binder = requestBinder(context, modulePackageName, DEFAULT_AUTHORITY);
         IXposedService service = IXposedService.Stub.asInterface(binder);
         if (service == null) {
             throw new IllegalStateException("NPatch remote service returned an invalid binder");
         }
-        return service;
-    }
-
-    public static boolean isAvailable(Context context) {
-        return isAvailable(context, DEFAULT_AUTHORITY);
-    }
-
-    public static boolean isAvailable(Context context, String authority) {
-        Objects.requireNonNull(context, "context");
-        Objects.requireNonNull(authority, "authority");
-        return context.getPackageManager().resolveContentProvider(authority, 0) != null;
+        return new NPatchRemoteClient(service);
     }
 
     public SharedPreferences getRemotePreferences(String group) {
-        return preferences.computeIfAbsent(group, key -> new RemotePreferences(service, key));
-    }
-
-    public void deleteRemotePreferences(String group) throws RemoteException {
-        service.deleteRemotePreferences(group);
-        RemotePreferences cached = preferences.remove(group);
+        RemotePreferences cached = preferences.get(group);
         if (cached != null) {
-            cached.replaceWithEmpty();
+            return cached;
         }
+        RemotePreferences created = new RemotePreferences(service, group);
+        RemotePreferences previous = preferences.putIfAbsent(group, created);
+        return previous != null ? previous : created;
     }
 
-    public String[] listRemoteFiles() throws RemoteException {
-        return service.listRemoteFiles();
-    }
-
-    public ParcelFileDescriptor openRemoteFile(String name)
-            throws RemoteException, FileNotFoundException {
-        ParcelFileDescriptor descriptor = service.openRemoteFile(name);
-        if (descriptor == null) {
-            throw new FileNotFoundException(name);
-        }
-        return descriptor;
-    }
-
-    public boolean deleteRemoteFile(String name) throws RemoteException {
-        return service.deleteRemoteFile(name);
-    }
-
-    public IXposedService getService() {
-        return service;
-    }
-
-    private static IBinder requestBinder(
-            Context context,
-            String method,
-            String modulePackageName,
-            String authority
-    ) {
-        Objects.requireNonNull(context, "context");
-        Objects.requireNonNull(modulePackageName, "modulePackageName");
-        Objects.requireNonNull(authority, "authority");
-        if (authority.isBlank()) {
+    private static IBinder requestBinder(Context context, String modulePackageName, String authority) {
+        if (authority == null || authority.trim().isEmpty()) {
             throw new IllegalArgumentException("authority is empty");
         }
         Bundle extras = new Bundle();
         extras.putString(KEY_MODULE_PACKAGE, modulePackageName);
-        Future<Bundle> call = CONNECTION_EXECUTOR.submit(
-                () -> context.getContentResolver().call(
+
+        Future<Bundle> call = CONNECTION_EXECUTOR.submit(() ->
+                context.getContentResolver().call(
                         Uri.parse("content://" + authority),
-                        method,
+                        METHOD_GET_REMOTE_SERVICE,
                         null,
-                        extras
-                )
-        );
+                        extras));
+
         Bundle result;
         try {
             result = call.get(CONNECT_TIMEOUT_SECONDS, TimeUnit.SECONDS);
-        } catch (TimeoutException exception) {
+        } catch (TimeoutException e) {
             call.cancel(true);
-            throw new IllegalStateException("NPatch remote service connection timed out", exception);
-        } catch (InterruptedException exception) {
+            throw new IllegalStateException("NPatch remote service connection timed out", e);
+        } catch (InterruptedException e) {
             call.cancel(true);
             Thread.currentThread().interrupt();
-            throw new IllegalStateException("NPatch remote service connection interrupted", exception);
-        } catch (ExecutionException exception) {
-            Throwable cause = exception.getCause();
+            throw new IllegalStateException("NPatch remote service connection interrupted", e);
+        } catch (ExecutionException e) {
+            Throwable cause = e.getCause();
             if (cause instanceof SecurityException) {
                 throw (SecurityException) cause;
             }
             throw new IllegalStateException("NPatch remote service is unavailable", cause);
         }
+
         IBinder binder = result == null ? null : result.getBinder(KEY_BINDER);
         if (binder == null) {
-            throw new SecurityException(
-                    "NPatch rejected the remote service request for " + modulePackageName);
+            throw new SecurityException("NPatch rejected remote service request for " + modulePackageName);
         }
         return binder;
     }
 
     private static final class RemotePreferences implements SharedPreferences {
-        private static final ExecutorService EXECUTOR =
+        private static final ExecutorService WRITE_EXECUTOR =
                 Executors.newSingleThreadExecutor(runnable -> {
-                    Thread thread = new Thread(runnable, "NPatch-RemoteApi");
+                    Thread thread = new Thread(runnable, "NPatch-RemotePrefs");
                     thread.setDaemon(true);
                     return thread;
                 });
@@ -219,7 +142,7 @@ public final class NPatchRemoteClient {
         private final IXposedService service;
         private final String group;
         private final Set<OnSharedPreferenceChangeListener> listeners =
-                Collections.newSetFromMap(new ConcurrentHashMap<>());
+                Collections.newSetFromMap(new ConcurrentHashMap<OnSharedPreferenceChangeListener, Boolean>());
         private volatile Map<String, Object> values;
 
         @SuppressWarnings("unchecked")
@@ -228,14 +151,14 @@ public final class NPatchRemoteClient {
             this.group = group;
             try {
                 Bundle result = service.requestRemotePreferences(group);
-                Serializable map = result == null ? null : result.getSerializable("map");
-                if (map instanceof Map<?, ?>) {
-                    values = immutableCopy((Map<String, Object>) map);
+                Serializable raw = result == null ? null : result.getSerializable("map");
+                if (raw instanceof Map<?, ?>) {
+                    values = immutableCopy((Map<String, Object>) raw);
                 } else {
                     values = Collections.emptyMap();
                 }
-            } catch (RemoteException exception) {
-                throw new IllegalStateException("Cannot read NPatch remote preferences", exception);
+            } catch (RemoteException e) {
+                throw new IllegalStateException("Cannot read NPatch remote preferences", e);
             }
         }
 
@@ -245,42 +168,40 @@ public final class NPatchRemoteClient {
         }
 
         @Override
-        public String getString(String key, String defaultValue) {
+        public String getString(String key, String defValue) {
             Object value = values.get(key);
-            return value == null ? defaultValue : (String) value;
+            return value instanceof String ? (String) value : defValue;
         }
 
         @SuppressWarnings("unchecked")
         @Override
-        public Set<String> getStringSet(String key, Set<String> defaultValues) {
+        public Set<String> getStringSet(String key, Set<String> defValues) {
             Object value = values.get(key);
-            return value == null
-                    ? defaultValues
-                    : new HashSet<>((Set<String>) value);
+            return value instanceof Set<?> ? new HashSet<>((Set<String>) value) : defValues;
         }
 
         @Override
-        public int getInt(String key, int defaultValue) {
+        public int getInt(String key, int defValue) {
             Object value = values.get(key);
-            return value == null ? defaultValue : (Integer) value;
+            return value instanceof Integer ? (Integer) value : defValue;
         }
 
         @Override
-        public long getLong(String key, long defaultValue) {
+        public long getLong(String key, long defValue) {
             Object value = values.get(key);
-            return value == null ? defaultValue : (Long) value;
+            return value instanceof Long ? (Long) value : defValue;
         }
 
         @Override
-        public float getFloat(String key, float defaultValue) {
+        public float getFloat(String key, float defValue) {
             Object value = values.get(key);
-            return value == null ? defaultValue : (Float) value;
+            return value instanceof Float ? (Float) value : defValue;
         }
 
         @Override
-        public boolean getBoolean(String key, boolean defaultValue) {
+        public boolean getBoolean(String key, boolean defValue) {
             Object value = values.get(key);
-            return value == null ? defaultValue : (Boolean) value;
+            return value instanceof Boolean ? (Boolean) value : defValue;
         }
 
         @Override
@@ -294,21 +215,13 @@ public final class NPatchRemoteClient {
         }
 
         @Override
-        public void registerOnSharedPreferenceChangeListener(
-                OnSharedPreferenceChangeListener listener
-        ) {
-            if (listener != null) {
-                listeners.add(listener);
-            }
+        public void registerOnSharedPreferenceChangeListener(OnSharedPreferenceChangeListener listener) {
+            if (listener != null) listeners.add(listener);
         }
 
         @Override
-        public void unregisterOnSharedPreferenceChangeListener(
-                OnSharedPreferenceChangeListener listener
-        ) {
-            if (listener != null) {
-                listeners.remove(listener);
-            }
+        public void unregisterOnSharedPreferenceChangeListener(OnSharedPreferenceChangeListener listener) {
+            if (listener != null) listeners.remove(listener);
         }
 
         private void applyDiff(Bundle diff) {
@@ -319,65 +232,45 @@ public final class NPatchRemoteClient {
                     changed.addAll(updated.keySet());
                     updated.clear();
                 }
-
                 Serializable deletes = diff.getSerializable("delete");
                 if (deletes instanceof Set<?>) {
                     for (Object item : (Set<?>) deletes) {
-                        if (item instanceof String && updated.containsKey(item)) {
-                            updated.remove(item);
+                        if (item instanceof String && updated.remove(item) != null) {
                             changed.add((String) item);
                         }
                     }
                 }
-
                 Serializable puts = diff.getSerializable("put");
                 if (puts instanceof Map<?, ?>) {
                     for (Map.Entry<?, ?> entry : ((Map<?, ?>) puts).entrySet()) {
-                        if (!(entry.getKey() instanceof String) || entry.getValue() == null) {
-                            continue;
-                        }
+                        if (!(entry.getKey() instanceof String) || entry.getValue() == null) continue;
                         String key = (String) entry.getKey();
-                        if (!Objects.equals(updated.put(key, entry.getValue()), entry.getValue())) {
-                            changed.add(key);
-                        }
+                        Object old = updated.put(key, entry.getValue());
+                        if (!Objects.equals(old, entry.getValue())) changed.add(key);
                     }
                 }
                 values = immutableCopy(updated);
             }
-            notifyListeners(changed);
-        }
-
-        private void replaceWithEmpty() {
-            Set<String> changed;
-            synchronized (this) {
-                changed = new HashSet<>(values.keySet());
-                values = Collections.emptyMap();
-            }
-            notifyListeners(changed);
-        }
-
-        private void notifyListeners(Set<String> changed) {
-            if (changed.isEmpty()) {
-                return;
-            }
-            List<OnSharedPreferenceChangeListener> snapshot =
-                    new ArrayList<>(listeners);
-            for (String key : changed) {
-                for (OnSharedPreferenceChangeListener listener : snapshot) {
-                    listener.onSharedPreferenceChanged(this, key);
+            if (!changed.isEmpty()) {
+                List<OnSharedPreferenceChangeListener> copy = new ArrayList<>(listeners);
+                for (String key : changed) {
+                    for (OnSharedPreferenceChangeListener listener : copy) {
+                        listener.onSharedPreferenceChanged(this, key);
+                    }
                 }
             }
         }
 
         private static Map<String, Object> immutableCopy(Map<String, Object> source) {
             Map<String, Object> copy = new HashMap<>();
-            source.forEach((key, value) -> {
+            for (Map.Entry<String, Object> entry : source.entrySet()) {
+                Object value = entry.getValue();
                 if (value instanceof Set<?>) {
-                    copy.put(key, new HashSet<>((Set<?>) value));
+                    copy.put(entry.getKey(), new HashSet<>((Set<?>) value));
                 } else {
-                    copy.put(key, value);
+                    copy.put(entry.getKey(), value);
                 }
-            });
+            }
             return Collections.unmodifiableMap(copy);
         }
 
@@ -387,43 +280,20 @@ public final class NPatchRemoteClient {
             private final Map<String, Object> puts = new HashMap<>();
 
             private Editor put(String key, Object value) {
-                if (value == null) {
-                    return remove(key);
-                }
+                if (value == null) return remove(key);
                 deletes.remove(key);
                 puts.put(key, value);
                 return this;
             }
 
-            @Override
-            public Editor putString(String key, String value) {
-                return put(key, value);
-            }
-
-            @Override
-            public Editor putStringSet(String key, Set<String> value) {
+            @Override public Editor putString(String key, String value) { return put(key, value); }
+            @Override public Editor putStringSet(String key, Set<String> value) {
                 return put(key, value == null ? null : new HashSet<>(value));
             }
-
-            @Override
-            public Editor putInt(String key, int value) {
-                return put(key, value);
-            }
-
-            @Override
-            public Editor putLong(String key, long value) {
-                return put(key, value);
-            }
-
-            @Override
-            public Editor putFloat(String key, float value) {
-                return put(key, value);
-            }
-
-            @Override
-            public Editor putBoolean(String key, boolean value) {
-                return put(key, value);
-            }
+            @Override public Editor putInt(String key, int value) { return put(key, value); }
+            @Override public Editor putLong(String key, long value) { return put(key, value); }
+            @Override public Editor putFloat(String key, float value) { return put(key, value); }
+            @Override public Editor putBoolean(String key, boolean value) { return put(key, value); }
 
             @Override
             public Editor remove(String key) {
@@ -443,14 +313,12 @@ public final class NPatchRemoteClient {
             @Override
             public boolean commit() {
                 Bundle diff = buildDiff();
-                if (diff == null) {
-                    return true;
-                }
+                if (diff == null) return true;
                 try {
                     service.updateRemotePreferences(group, diff);
                     applyDiff(diff);
                     return true;
-                } catch (RemoteException exception) {
+                } catch (RemoteException e) {
                     return false;
                 }
             }
@@ -458,23 +326,18 @@ public final class NPatchRemoteClient {
             @Override
             public void apply() {
                 Bundle diff = buildDiff();
-                if (diff == null) {
-                    return;
-                }
+                if (diff == null) return;
                 applyDiff(diff);
-                EXECUTOR.execute(() -> {
+                WRITE_EXECUTOR.execute(() -> {
                     try {
                         service.updateRemotePreferences(group, diff);
                     } catch (RemoteException ignored) {
-                        // SharedPreferences.apply() cannot report asynchronous persistence errors.
                     }
                 });
             }
 
             private Bundle buildDiff() {
-                if (!clear && deletes.isEmpty() && puts.isEmpty()) {
-                    return null;
-                }
+                if (!clear && deletes.isEmpty() && puts.isEmpty()) return null;
                 Bundle diff = new Bundle();
                 diff.putBoolean("clear", clear);
                 diff.putSerializable("delete", new HashSet<>(deletes));
